@@ -1,3 +1,8 @@
+2005-11-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/24734
+	* g++.dg/gomp/tpl-master-1.C: New test.
+
 2005-11-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* gcc.dg/gomp/empty.c: Add -O to dg-options.
