@@ -1,3 +1,8 @@
+2005-11-08  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/24734
+	* testsuite/libgomp.c++/master-1.C: New test.
+
 2005-11-07  Jakub Jelinek  <jakub@redhat.com>
 
 	* testsuite/libgomp.dg/copyin-3.c: New test.
